# nebula-shield-anti-virus

./: .checksums.json  .env.example  .env.production  .gitignore  .npmrc  .railway.json  2026-THREAT-QUICK-REFERENCE.md  2FA-RESET-COMPLETE.md  ADMIN-CREDENTIALS.md  ADMIN_PANEL_GUIDE.md  ADVANCED_DDOS_AND_ZERO_DAY_PROTECTION.md  ADVANCED_DRIVER_MANAGER_ENHANCEMENTS.md  ADVANCED_FEATURES.md  ADVANCED_FEATURES_SUMMARY.md  ADVANCED_FIREWALL_DOCUMENTATION.md  ADVANCED_FIREWALL_GUIDE.md  ADVANCED_FIREWALL_QUICK_REFERENCE.md  ADVANCED_MONITORING_GUIDE.md  ADVANCED_SECURITY_ENHANCEMENTS.md  ADVANCED_SECURITY_IMPLEMENTATION.md  ADVANCED_SECURITY_QUICK_REFERENCE.md  AI_ML_ENHANCEMENTS.md  AI_ML_FEATURES_GUIDE.md  AI_ML_PRACTICAL_EXAMPLES.md  AI_ML_QUICK_REFERENCE.md  API-URL-FIX-SUMMARY.md  APPEARANCE-ENHANCEMENTS.md  APPLICATION-STARTUP-FIXED.md  APPLY-ENHANCED-MONITORING.bat  AUTHENTICATION_HARDENING_GUIDE.md  AUTH_SYSTEM.md  AUTOMATED_RESPONSE_AND_MONITORING.md  AUTOMATED_RESPONSE_QUICK_REFERENCE.md  AUTO_SIGNATURE_UPDATES.md  AUTO_UPDATE_IMPLEMENTATION_SUMMARY.md  AUTO_UPDATE_QUICK_REFERENCE.md  BACKEND-404-FIX.md  BACKEND-CONNECTION-FIX.md  BACKEND-FIX-GUIDE.md  BEFORE-AFTER-COMPARISON.md  (+357 more)
backend/: .env.example  ALLOW-MOBILE-ACCESS.bat  CMakeLists.txt  FIX-FIREWALL.bat  INSTALL.md  Procfile  README.md  START-BACKEND.bat  activity-logger.js  advanced-firewall.js  advanced-monitoring-system.js  advanced-monitoring.js  ai-threat-detector.js  analytics-service.js  auth-server.js  auth-service.js  automatic-update-system.js  backend-log.txt  backup-service.js  behavior-based-detector.js  binding.gyp  bulk-operations.js  check-admin-users.js  check-all-conflicts.js  check-schema.js  check-users.js  clamav-integration.js  cloud-backup.js  cloud-sync-service.js  cloud-threat-intelligence-manager.js  cloud-threat-intelligence.js  debug-login-detailed.js  disk-cleaner.js  disk-cleanup-manager.js  downgrade-user.js  enhanced-hacker-protection.js  enhanced-ml-engine.js  file-cleaner.js  firewall-engine.js  fix-admin-password.js  (+52 more)
backend/config/: email.js  paypal.js  stripe.js
backend/data/: config.json  parental-controls.json  password-vault.json  sandbox-config.json  virus-signatures.json
backend/examples/: react-integration.js
backend/include/: config_manager.h  database_manager.h  file_monitor.h  http_server.h  logger.h  scanner_engine.h  storage_manager.h  threat_detector.h
backend/routes/: admin.js
backend/scripts/: build_linux.sh  build_windows.bat  check-signatures.js  load-signatures.js  smoke-av-status.js
backend/security/: api-encryption.js  csrf-protection.js  input-sanitizer.js  jwt-security-manager.js  security-audit-logger.js
backend/src/: CMakeLists.txt  bindings.cpp  config_manager.cpp  database_manager.cpp  enhanced-scanner-engine.cpp  file_monitor.cpp  file_monitor_enhanced.cpp  http_server.cpp  logger.cpp  main.cpp  scanner_engine.cpp  signature_updater.cpp  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+372 files in other folders)
