[package]
name = "nebula-shield-antivirus"
version = "1.0.0"
description = "Advanced Anti-Virus Protection with AI-powered threat detection"
authors = ["Nebula Shield Team"]
license = "MIT"
repository = "https://github.com/ColinNebula/nebula-shield-anti-virus"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
md5 = "0.7"
walkdir = "2"
zip = "0.6"
regex = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
num_cpus = "1"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
